    * oxygen: workaround for transparent background of tooltips
    * X11: Set correct WM_CLASS property to windows
    * fixed: size of preferences dialog on low-res screens
    * fixed: loading plugins with relative paths in portable build
    * fixed: displaying a lot of RSS feeds in RSS widget in locationbar
    * fixed: enabling disabled rules in AdBlock now works everytime

Version 1.4.4
    * released 1 September 2013
    * added ctrl/shift + insert shortcuts to copy/paste in webview
    * don't try to download empty page
    * reverted forcing SSLv3 protocol for secured connections
    * duckduckgo.com is now default search engine
    * fixed: correct height of icons widget in SiteInfo
    * fixed: hide tabbar with only one tab option now works in fullscreen
    * fixed: crash with Oxygen theme when closing windows with tabs on top
    * fixed: saving IgnoreAllSSLWarnings option from SSLManager
    * fixed: crash on saving settings with unavailable theme
    * fixed: Accept-Language header now works with all sites
    * fixed: using external download manager with use defined location setting
    * GreaseMonkey: fixed buttons in script list with RTL layout
    * GreaseMonkey: run userscripts in all frames on page
    * X11: Set correct WM_CLASS property to windows

Version 1.4.3
    * released 9 May 2013
    * fixed: crash upon closing private browsing window
    * fixed: element hiding rules not working when more than 5000 in subscription
    * fixed: saving some tab icons in session file
    * fixed: make Acid3 test pass even with AdBlock enabled
    * mac: attempt to fix slow scrolling on trackpad

Version 1.4.2
    * released 22 April 2013
    * don't limit speed of loading animation in tabbar
    * fixed loading HTML5 videos on YouTube
    * fixed saving cursive font in fonts preferences
    * fixed translating edit actions in page context menu
    * fixed connecting to older secured servers by forcing older SSL protocol